cmake_minimum_required(VERSION 3.16)

project(vmtkPythonPakcage)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

if(NOT DEFINED vmtkPythonPackage_SUPERBUILD)
  set(vmtkPythonPackage_SUPERBUILD 1)
endif()


if (vmtkPythonPackage_SUPERBUILD)
    include(ExternalProject)
    SET(SUPERBUILD_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/Install CACHE PATH "Path where all targets will be installed.")
    SET(CMAKE_BUILD_TYPE "Release")
    SET(BUILD_SHARED_LIBS ON)
    SET(VTK_VMTK_WRAP_PYTHON ON)
    SET(VTK_USE_X ON)
    SET(VMTK_USE_RENDERING ON)
    SET(VMTK_RENDERING_BACKEND "OpenGL2" CACHE STRING "Graphic backend for VTK")

##
## Build ITK
##
    SET(ITK_SOURCE ${CMAKE_BINARY_DIR}/ITK)
    SET(ITK_BINARY ${CMAKE_BINARY_DIR}/ITK-Build)
    ExternalProject_Add(ITK
    GIT_REPOSITORY "https://github.com/Kitware/ITK.git"
    GIT_TAG "v4.13.0"
    SOURCE_DIR ${ITK_SOURCE}
    BINARY_DIR ${ITK_BINARY}
    # CMAKE_GENERATOR ${gen}
    USES_TERMINAL_CONFIGURE 1
    USES_TERMINAL_BUILD 1
    USES_TERMINAL_INSTALL 1
    CMAKE_ARGS
    #   -Dgit_EXECUTABLE:FILEPATH=${GIT_EXECUTABLE}
    #   -DCMAKE_OSX_ARCHITECTURES:STRING=${CMAKE_OSX_ARCHITECTURES}
    #   -DCMAKE_CXX_COMPILER:STRING=${CMAKE_CXX_COMPILER}
      #-DCMAKE_CXX_FLAGS:STRING="-fPIC" #${CMAKE_CXX_FLAGS}
      #-DCMAKE_C_FLAGS:STRING="-fPIC" #${CMAKE_C_FLAGS}
    #   -DCMAKE_EXE_LINKER_FLAGS:STRING=${CMAKE_EXE_LINKER_FLAGS}
    #   -DCMAKE_SHARED_LINKER_FLAGS:STRING=${CMAKE_SHARED_LINKER_FLAGS}
      -DCMAKE_BUILD_TYPE:STRING=${CMAKE_BUILD_TYPE}
      -DCMAKE_INSTALL_PREFIX:PATH=${SUPERBUILD_INSTALL_PREFIX}
    #   -DITK_USE_FLAT_DIRECTORY_INSTALL:BOOL=${ITK_USE_FLAT_DIRECTORY_INSTALL}
      -DBUILD_SHARED_LIBS:BOOL=${BUILD_SHARED_LIBS}
    #   -DCMAKE_RC_COMPILER:BOOL=${CMAKE_RC_COMPILER}
      -DBUILD_EXAMPLES:BOOL=OFF
      -DBUILD_TESTING:BOOL=OFF
      -DITK_USE_REVIEW:BOOL=ON
      -DITK_USE_REVIEW_STATISTICS:BOOL=ON
      -DITK_USE_OPTIMIZED_REGISTRATION_METHODS:BOOL=ON
      -DCMAKE_BUILD_WITH_INSTALL_RPATH=OFF
      -DCMAKE_MACOSX_RPATH=ON
      -DCMAKE_INSTALL_RPATH=${SUPERBUILD_INSTALL_PREFIX}/lib;@rpath
      -DCMAKE_INSTALL_RPATH_USE_LINK_PATH=TRUE
    INSTALL_DIR "${SUPERBUILD_INSTALL_PREFIX}/ITK"
    )
    set( VMTK_DEPENDS ${VMTK_DEPENDS} "ITK" )

##
## Build VTK
##

    SET(VTK_GIT_REPOSITORY "https://github.com/Kitware/VTK.git")
    set(VTK_GIT_TAG "v8.1.2")
    SET(VTK_SOURCE ${CMAKE_BINARY_DIR}/VTK)
    SET(VTK_BINARY ${CMAKE_BINARY_DIR}/VTK-Build)

    ExternalProject_Add( VTK
        GIT_REPOSITORY ${VTK_GIT_REPOSITORY}
        GIT_TAG ${VTK_GIT_TAG}
        SOURCE_DIR ${VTK_SOURCE}
        BINARY_DIR ${VTK_BINARY}
        # CMAKE_GENERATOR ${gen}
        USES_TERMINAL_CONFIGURE 1
        USES_TERMINAL_BUILD 1
        USES_TERMINAL_INSTALL 1
        CMAKE_ARGS
            # -Dgit_EXECUTABLE:FILEPATH=${GIT_EXECUTABLE}
            # -DCMAKE_OSX_ARCHITECTURES:STRING=${CMAKE_OSX_ARCHITECTURES}
            # -DCMAKE_CXX_COMPILER:STRING=${CMAKE_CXX_COMPILER}
            # -DCMAKE_CXX_FLAGS:STRING=${CMAKE_CXX_FLAGS}
            # -DCMAKE_C_FLAGS:STRING=${CMAKE_C_FLAGS}
            # -DCMAKE_EXE_LINKER_FLAGS:STRING=${CMAKE_EXE_LINKER_FLAGS}
            # -DCMAKE_SHARED_LINKER_FLAGS:STRING=${CMAKE_SHARED_LINKER_FLAGS}
            -DCMAKE_BUILD_TYPE:STRING=${CMAKE_BUILD_TYPE}
            -DCMAKE_INSTALL_PREFIX:PATH=${SUPERBUILD_INSTALL_PREFIX}
            -DBUILD_SHARED_LIBS:BOOL=${BUILD_SHARED_LIBS}
            -DVTK_WRAP_PYTHON:BOOL=${VTK_VMTK_WRAP_PYTHON}
            -DVTK_USE_TK:BOOL=OFF
            # -DVTK_USE_CARBON:BOOL=${VTK_USE_CARBON}
            # -DVTK_USE_COCOA:BOOL=${VTK_VMTK_USE_COCOA}
            # -DVTK_USE_INFOVIS:BOOL=${VTK_USE_INFOVIS}
            # -DVTK_USE_N_WAY_ARRAYS:BOOL=${VTK_USE_N_WAY_ARRAYS}
            # -DVTK_USE_PARALLEL:BOOL=${VTK_USE_PARALLEL}
            -DVTK_USE_QT:BOOL=${VTK_USE_QT}
            -DVTK_Group_Rendering:BOOL=${VMTK_USE_RENDERING}
            #-DVTK_USE_HYBRID:BOOL=${VTK_USE_HYBRID}
            # -DVTK_USE_TEXT_ANALYSIS:BOOL=${VTK_USE_TEXT_ANALYSIS}
            -DVTK_USE_X:BOOL=${VTK_USE_X}
            -DBUILD_EXAMPLES:BOOL=OFF
            -DBUILD_TESTING:BOOL=OFF
            -DVTK_USE_GUISUPPORT:BOOL=OFF
            -DVTK_INSTALL_PYTHON_USING_CMAKE:BOOL=ON
            -DVTK_RENDERING_BACKEND:STRING=${VMTK_RENDERING_BACKEND}
            # -DCMAKE_RC_COMPILER:BOOL=${CMAKE_RC_COMPILER}
            # -DPYTHON_DEBUG_LIBRARY=${PYTHON_DEBUG_LIBRARY}
            # -DPYTHON_EXECUTABLE=${PYTHON_EXECUTABLE}
            -DPYTHON_INCLUDE_DIR=${PYTHON_INCLUDE_DIR}
            -DPYTHON_LIBRARY=${PYTHON_LIBRARY}
            -DCMAKE_BUILD_WITH_INSTALL_RPATH=OFF
            -DCMAKE_MACOSX_RPATH=ON
            -DCMAKE_INSTALL_RPATH=${SUPERBUILD_INSTALL_PREFIX}/lib;@rpath
            -DCMAKE_INSTALL_RPATH_USE_LINK_PATH=TRUE
        INSTALL_DIR "${SUPERBUILD_INSTALL_PREFIX}/VTK"
    )
    set( VMTK_DEPENDS ${VMTK_DEPENDS} "VTK" )


    # Skip git submodules update
    cmake_policy(SET CMP0097 NEW)
    option(VMTK_BUILD_TESTING "Build the VMTK testing libraries" OFF)
    
    if (VMTK_BUILD_TESTING)
        set(VMTK_GIT_SUBMODULES "tests/vmtk-test-data")
    else()
        set(VMTK_GIT_SUBMODULES "")
    endif()

    
    set(install_dir "${CMAKE_INSTALL_PREFIX}/vmtk")
    set(bin_dir "${CMAKE_INSTALL_PREFIX}/bin")
    SET(VMTK_SOURCE ${CMAKE_BINARY_DIR}/VMTK)
    SET(VMTK_BINARY ${CMAKE_BINARY_DIR}/VMTK-build)
    
    ExternalProject_add(VMTK
        GIT_REPOSITORY "https://github.com/Mengman/vmtk.git"
        GIT_TAG "origin/v1.4.0-vtk-v8.1.2"
        GIT_SUBMODULES "${VMTK_GIT_SUBMODULES}"
        SOURCE_DIR ${VMTK_SOURCE}
        BINARY_DIR ${VMTK_BINARY}
        USES_TERMINAL_DOWNLOAD 1
        USES_TERMINAL_UPDATE 1
        USES_TERMINAL_CONFIGURE 1
        USES_TERMINAL_BUILD 1
        INSTALL_COMMAND ""
        CMAKE_ARGS
            # -DBUILDNAME:STRING=${BUILDNAME}
            # -DSITE:STRING=${SITE}
            # -DMAKECOMMAND:STRING=${MAKECOMMAND}
            # -DCMAKE_CXX_COMPILER:STRING=${CMAKE_CXX_COMPILER}
            -DCMAKE_BUILD_TYPE:STRING=${CMAKE_BUILD_TYPE}
            -DBUILD_SHARED_LIBS:BOOL=${BUILD_SHARED_LIBS}
            -DBUILD_EXAMPLES:BOOL=OFF
            -DBUILD_TESTING:BOOL=OFF
            -DBUILD_DOCUMENTATION:BOOL=OFF
            # -DCMAKE_SHARED_LINKER_FLAGS:STRING=${CMAKE_SHARED_LINKER_FLAGS}
            # -DCMAKE_EXE_LINKER_FLAGS:STRING=${CMAKE_EXE_LINKER_FLAGS}
            # -DCMAKE_OSX_ARCHITECTURES:STRING=${CMAKE_OSX_ARCHITECTURES}
            # -DCMAKE_CXX_FLAGS:STRING=${CMAKE_CXX_FLAGS}
            # -DCMAKE_C_FLAGS:STRING=${CMAKE_C_FLAGS}
            -DCMAKE_INSTALL_PREFIX:PATH=${SUPERBUILD_INSTALL_PREFIX}
            -DVTK_VMTK_WRAP_PYTHON:BOOL=${VTK_VMTK_WRAP_PYTHON}
            -DVMTK_USE_SUPERBUILD:BOOL=OFF
            -DVMTK_CONTRIB_SCRIPTS:BOOL=ON
            -DVTK_VMTK_CONTRIB:BOOL=ON
            -DVMTK_SCRIPTS_ENABLED:BOOL=ON
            -DVTK_ENABLE_VTKPYTHON:BOOL=ON
            -DVMTK_MINIMAL_INSTALL:BOOL=OFF
            # -DVMTK_ENABLE_DISTRIBUTION:BOOL=${VMTK_ENABLE_DISTRIBUTION}
            -DVMTK_WITH_LIBRARY_VERSION:BOOL=OFF
            -DVMTK_BUILD_TETGEN:BOOL=ON
            # -DVTK_VMTK_USE_COCOA:BOOL=${VTK_VMTK_USE_COCOA}
            -DVMTK_BUILD_STREAMTRACER:BOOL=ON
            # -DVTK_REQUIRED_OBJCXX_FLAGS:STRING=${VTK_REQUIRED_OBJCXX_FLAGS}
            -DVMTK_USE_RENDERING:STRING=${VMTK_USE_RENDERING}
            -DITK_DIR:PATH=${ITK_BINARY}
            -DVTK_DIR:PATH=${VTK_BINARY}
            # -DCMAKE_RC_COMPILER:BOOL=${CMAKE_RC_COMPILER}
            # -DPYTHON_DEBUG_LIBRARY=${PYTHON_DEBUG_LIBRARY}
            -DPYTHON_EXECUTABLE=${PYTHON_EXECUTABLE}
            -DPYTHON_INCLUDE_DIR=${PYTHON_INCLUDE_DIR}
            -DPYTHON_LIBRARY=${PYTHON_LIBRARY}
            -DCMAKE_BUILD_WITH_INSTALL_RPATH=OFF
            -DCMAKE_MACOSX_RPATH=ON
            -DCMAKE_INSTALL_RPATH=${SUPERBUILD_INSTALL_PREFIX}/lib;@rpath
            -DCMAKE_INSTALL_RPATH_USE_LINK_PATH=TRUE
        INSTALL_DIR "${SUPERBUILD_INSTALL_PREFIX}/vmtk"
        DEPENDS ${VMTK_DEPENDS}
    )


    ExternalProject_add(${PROJECT_NAME}
        SOURCE_DIR ${CMAKE_SOURCE_DIR}
        BINARY_DIR ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-build
        CMAKE_CACHE_ARGS
            -DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_INSTALL_PREFIX}
            -DvmtkPythonPackage_SUPERBUILD:BOOL=0
            -DVMTK_BINARY_DIR:PATH=${CMAKE_BINARY_DIR}
        DOWNLOAD_COMMAND ""
        UPDATE_COMMAND ""
        USES_TERMINAL_CONFIGURE 1
        INSTALL_COMMAND ""
        DEPENDS VMTK
    )

    install(SCRIPT ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-build/cmake_install.cmake)
else()

    install(SCRIPT ${VMTK_BINARY_DIR}/ITK-Build/cmake_install.cmake)
    install(SCRIPT ${VMTK_BINARY_DIR}/VTK-Build/cmake_install.cmake)
    install(SCRIPT ${VMTK_BINARY_DIR}/VMTK-Build/cmake_install.cmake)
endif()